# aracor-ai-assignment-bleroni

./: .env.example  README.md  pyproject.toml
src/documents/: invalid-docx-file.docx  sample-text-file.txt
src/models/: anthropic_config.py  cohere_config.py  cohere_model.py  model_manager.py  openai_config.py  openai_model.py  summary.py
src/processors/: document_processor.py
src/utils/: rate_limiting.py
tests/: test_document_processor.py  test_model_manager.py  test_summary_generator.py
